# atomic-habit-todo

./: .dockerignore  .env.docker  .env.example  .eslintignore  .gitignore  .prettierignore  CLAUDE.md  GEMINI.md  README.md  analysis_report.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  test_report.md  vercel.json
apps/api/: .dockerignore  .env.example  DEPLOY_HUGGINGFACE.md  Dockerfile  HF_README.md  README.md  alembic.ini  pyproject.toml  pytest.ini  test_event_emitter.py  verify_schema.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260103_001_create_users_and_sessions.py  20260104_002_create_tasks_table.py  20260210_003_create_habits_table.py  20260212_004_add_habit_completions_constraints.py  20260213_005_add_habit_task_columns.py
apps/api/scripts/: validate_quickstart.py  verify_database.py  view_events.py
apps/api/src/: config.py  database.py  main.py  rate_limiter.py
apps/api/src/middleware/: auth.py
apps/api/src/models/: habit.py  habit_completion.py  session.py  task.py  user.py
apps/api/src/routes/: auth.py  habits.py  tasks.py
apps/api/src/schemas/: habit_schemas.py
apps/api/src/services/: auth_service.py  event_emitter.py  habit_service.py  habit_task_service.py  miss_detector.py  notification_service.py  schedule_parser.py  streak_calculator.py  task_service.py
apps/api/tests/: conftest.py
apps/api/tests/contract/: test_auth_contract.py  test_habits_contract.py  test_tasks_contract.py
apps/api/tests/helpers/: habit_helpers.py
apps/api/tests/integration/: conftest.py  test_auth_endpoints.py  (+8 more)
(+338 files in other folders)
